зщкеащдшщ ьштщк срфтпуі

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,12 +37,12 @@
         <nav class="nav">
           <ul class="menu-list">
             <li class="menu-list__item list">
-              <div class="menu-list__text-after">
-                <a class="menu-list__text" href="./index.html">Студия</a>
-              </div>
+              <a class="menu-list__text" href="./index.html">Студия</a>
             </li>
             <li class="menu-list__item list">
-              <a class="menu-list__text" href="./portfolio.html">Портфолио</a>
+              <div class="menu-list__portfolio-after">
+                <a class="menu-list__text" href="./portfolio.html">Портфолио</a>
+              </div>
             </li>
             <li class="menu-list__item list">
               <a class="menu-list__text" href="">Контакты</a>
