--- a/index.html
+++ b/index.html
@@ -68,41 +68,45 @@
       <!-- mobile-menu-section -->
       <div class="mob__menu is-hidden">
         <div class="container">
-          <button type="button" class="mob__button">
-            <svg class="mob__icon" width="18" , height="18">
-              <use href="./images/symbol-defs.svg#icon-x"></use>
-            </svg>
-          </button>
-          <ul class="mob__list">
-            <li class="mob__list-item list">
-              <a class="mob__list-text" href="./index.html">Студия</a>
-            </li>
-            <li class="mob__list-item list">
-              <a class="mob__list-text" href="./portfolio.html">Портфолио</a>
-            </li>
-            <li class="mob__list-item list">
-              <a class="mob__list-text" href="">Контакты</a>
-            </li>
-          </ul>
-          <a class="mob__phone" href="tel:+380961111111">+38 096 111 11 11</a>
-          <a class="mob__mail" href="emailto:info@devstudio.com">
-            info@devstudio.com</a
-          >
-          <div class="mob-soc">
-            <ul class="mob__soc--list list">
-              <li class="mob__soc--item">
-                <a class="mob__soc--link link" href=""> Instagram </a>
+          <div class="top_menu">
+            <button type="button" class="mob__button">
+              <svg class="mob__icon" width="18" , height="18">
+                <use href="./images/symbol-defs.svg#icon-x"></use>
+              </svg>
+            </button>
+            <ul class="mob__list">
+              <li class="mob__list-item list">
+                <a class="mob__list-text" href="./index.html">Студия</a>
               </li>
-              <li class="mob__soc--item">
-                <a class="mob__soc--link" href=""> Twitter </a>
+              <li class="mob__list-item list">
+                <a class="mob__list-text" href="./portfolio.html">Портфолио</a>
               </li>
-              <li class="mob__soc--item">
-                <a class="mob__soc--link" href=""> Facebook </a>
-              </li>
-              <li class="mob__soc--item">
-                <a class="mob__soc--link" href=""> LinkedIn </a>
+              <li class="mob__list-item list">
+                <a class="mob__list-text" href="">Контакты</a>
               </li>
             </ul>
+          </div>
+          <div class="bottom_menu">
+            <a class="mob__phone" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="mob__mail" href="emailto:info@devstudio.com">
+              info@devstudio.com</a
+            >
+            <div class="mob-soc">
+              <ul class="mob__soc--list list">
+                <li class="mob__soc--item">
+                  <a class="mob__soc--link link" href=""> Instagram </a>
+                </li>
+                <li class="mob__soc--item">
+                  <a class="mob__soc--link" href=""> Twitter </a>
+                </li>
+                <li class="mob__soc--item">
+                  <a class="mob__soc--link" href=""> Facebook </a>
+                </li>
+                <li class="mob__soc--item">
+                  <a class="mob__soc--link" href=""> LinkedIn </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
