--- a/portfolio.html
+++ b/portfolio.html
@@ -247,7 +247,10 @@
                     media="(min-width:768px)"
                   />
                   <source
-                    srcset="./images/seafood-mob.jpg 1x, ./seafood-mob2.jpg 2x"
+                    srcset="
+                      ./images/seafood-mob.jpg  1x,
+                      ./images/seafood-mob2.jpg 2x
+                    "
                     media="(min-width:480px)"
                   />
                   <img
@@ -287,8 +290,8 @@
                   />
                   <source
                     srcset="
-                      ./images/headphones-mob.jpg 1x,
-                      ./headphones-mob2.jpg       2x
+                      ./images/headphones-mob.jpg  1x,
+                      ./images/headphones-mob2.jpg 2x
                     "
                     media="(min-width:480px)"
                   />
@@ -325,7 +328,10 @@
                     media="(min-width:768px)"
                   />
                   <source
-                    srcset="./images/boxes-mob.jpg 1x, ./boxes-mob2.jpg 2x"
+                    srcset="
+                      ./images/boxes-mob.jpg  1x,
+                      ./images/boxes-mob2.jpg 2x
+                    "
                     media="(min-width:480px)"
                   />
                   <img
@@ -358,7 +364,7 @@
                     media="(min-width:768px)"
                   />
                   <source
-                    srcset="./images/imac-mob.jpg 1x, ./imac-mob2.jpg 2x"
+                    srcset="./images/imac-mob.jpg 1x, ./images/imac-mob2.jpg 2x"
                     media="(min-width:480px)"
                   />
                   <img
@@ -399,7 +405,10 @@
                     media="(min-width:768px)"
                   />
                   <source
-                    srcset="./images/glossy-mob.jpg 1x, ./glossy-mob2.jpg 2x"
+                    srcset="
+                      ./images/glossy-mob.jpg  1x,
+                      ./images/glossy-mob2.jpg 2x
+                    "
                     media="(min-width:480px)"
                   />
                   <img
@@ -435,7 +444,10 @@
                     media="(min-width:768px)"
                   />
                   <source
-                    srcset="./images/lbltg-mob.jpg 1x, ./lbltg-mob2.jpg 2x"
+                    srcset="
+                      ./images/lbltg-mob.jpg  1x,
+                      ./images/lbltg-mob2.jpg 2x
+                    "
                     media="(min-width:480px)"
                   />
                   <img class="team__img" src="./images/lbltg.jpg" alt="бирка" />
@@ -467,7 +479,10 @@
                     media="(min-width:768px)"
                   />
                   <source
-                    srcset="./images/hands-mob.jpg 1x, ./hands-mob2.jpg 2x"
+                    srcset="
+                      ./images/hands-mob.jpg   1x,
+                      ./images/hands-mob-2.jpg 2x
+                    "
                     media="(min-width:480px)"
                   />
                   <img
